@@ -87,101 +87,6 @@ def parseSIAP2Geometry(aString, fieldName="POS"):
 		assert False
 	
 
-####################### bboxSIAP mixin
-
-def getBboxFromSIAPPars(raDec, sizes, applyCosD=True):
-	"""returns a bounding box in decimal ra and dec for the siap parameters
-	raDec and sizes.
-
-	If applyCosD is true, the size in alpha will be multiplied by cos(delta).
-	SIAP mandates this behaviour, but for unit tests it is more confusing
-	than helpful.
-
-	>>> getBboxFromSIAPPars((40, 60), (2, 3), applyCosD=False)
-	Box((41,61.5), (39,58.5))
-	>>> getBboxFromSIAPPars((0, 0), (2, 3))
-	Box((1,1.5), (-1,-1.5))
-	"""
-	alpha, delta = raDec
-	sizeAlpha, sizeDelta = sizes
-	if applyCosD:
-		cosD = math.cos(delta*DEG)
-		if cosD<1e-10:
-			# People can't mean that
-			cosD = 1
-		sizeAlpha = sizeAlpha*cosD
-	if abs(delta)>89:
-		return coords.Box(0, 360, coords.clampDelta(delta-sizeDelta/2.), 
-			coords.clampDelta(delta+sizeDelta/2.))
-	return coords.Box(
-		alpha-sizeAlpha/2., alpha+sizeAlpha/2,
-		coords.clampDelta(delta-sizeDelta/2.), 
-		coords.clampDelta(delta+sizeDelta/2.))
-
-
-def normalizeBox(bbox):
-	"""returns bbox with the left corner x between 0 and 360.
-	"""
-	if 0<=bbox.x0<360:
-		return bbox
-	newx0 = coords.clampAlpha(bbox.x0)
-	return bbox.translate((newx0-bbox.x0, 0))
-
-
-def splitCrossingBox(bbox):
-	"""splits bboxes crossing the stitch line.
-
-	The function returns bbox, None if the bbox doesn't cross the stitch line,
-	leftBox, rightBox otherwise.
-
-	>>> splitCrossingBox(coords.Box(10, 12, -30, 30))
-	(Box((12,30), (10,-30)), None)
-	>>> splitCrossingBox(coords.Box(-23, 12, -30, 0))
-	(Box((360,0), (337,-30)), Box((12,0), (0,-30)))
-	>>> splitCrossingBox(coords.Box(300, 400, 0, 30))
-	(Box((360,30), (300,0)), Box((40,30), (0,0)))
-	"""
-	bbox = normalizeBox(bbox)
-	if bbox.x1<0 or bbox.x0>360:
-		leftBox = coords.Box((coords.clampAlpha(bbox.x1), bbox.y0), (360, bbox.y1))
-		rightBox = coords.Box((0, bbox.y0), (coords.clampAlpha(bbox.x0), bbox.y1))
-	else:
-		leftBox, rightBox = bbox, None
-	return leftBox, rightBox
-
-
-# XXX TODO: Maybe rework this to make it use base.getSQLKey?
-# (caution: that would mess up many unit tests...)
-_INTERSECT_QUERIES = {
-	"COVERS": "primaryBbox ~ %(<p>roiPrimary)s AND (secondaryBbox IS NULL OR"
-	  " secondaryBbox ~ %(<p>roiSecondary)s)",
-	"ENCLOSED": "%(<p>roiPrimary)s ~ primaryBbox AND"
-		" (%(<p>roiSecondary)s IS NULL OR %(<p>roiSecondary)s ~ secondaryBbox)",
-	"CENTER": "point '(%(<p>roiAlpha)s,%(<p>roiDelta)s)' @ primaryBbox OR"
-		" point '(%(<p>roiAlpha)s,%(<p>roiDelta)s)' @ secondaryBbox",
-	None: "(primaryBbox && %(<p>roiPrimary)s) OR"
-		" (secondaryBbox IS NOT NULL AND secondaryBbox && %(<p>roiSecondary)s) OR"
-		" (secondaryBbox IS NOT NULL AND secondaryBbox && %(<p>roiPrimary)s) OR" 
-		" (%(<p>roiSecondary)s IS NOT NULL AND %(<p>roiSecondary)s && primaryBbox)",
-	"OVERLAPS": "(primaryBbox && %(<p>roiPrimary)s) OR"
-		" (secondaryBbox IS NOT NULL AND secondaryBbox && %(<p>roiSecondary)s) OR"
-		" (secondaryBbox IS NOT NULL AND secondaryBbox && %(<p>roiPrimary)s) OR" 
-		" (%(<p>roiSecondary)s IS NOT NULL AND %(<p>roiSecondary)s && primaryBbox)",
-	}
-
-
-def getBboxQuery(intersect, ra, dec, sizes, prefix, sqlPars):
-	"""returns SQL for a SIAP query on bboxSIAP tables.
-	"""
-	bbox = getBboxFromSIAPPars((ra, dec), sizes)
-	bboxes = splitCrossingBox(bbox)
-	sqlPars.update({prefix+"roiPrimary": bboxes[0], 
-		prefix+"roiSecondary": bboxes[1],
-		prefix+"roiAlpha": ra,
-		prefix+"roiDelta": dec,})
-	return _INTERSECT_QUERIES[intersect].replace("<p>", prefix) 
-
-
 ####################### pgsSIAP mixin
 
 # expressions as used in getPGSQuery
