@@ -152,7 +152,7 @@ feeding the tables mixing in a given mixin.
 
 .. replaceWithResult getMixinDocs(docStructure, [
   "//products#table", "//scs#positions", "//scs#q3cindex",
-  "//siap#bbox", "//siap#pgs", "//ssap#hcd", "//obscore#publish",
+  "//siap#pgs", "//ssap#hcd", "//obscore#publish",
   "//obscore#publishSIAP", "//slap#basic",
   "//ssap#sdm-instance", "//ssap#mixc",
   "//obscore#publishSSAPHCD", "//epntap#table", "//epntap#table-2_0"])
@@ -205,7 +205,7 @@ Procedures available for rowmaker apply
     "//procs#simpleSelect", "//procs#resolveObject",
     "//procs#mapValue", "//procs#fullQuery", "//procs#dictMap", 
     "//siap#computePGS",
-    "//siap#computeBbox", "//siap#setMeta", "//ssap#setMeta",
+    "//siap#setMeta", "//ssap#setMeta",
     "//siap#getBandFromFilter", "//ssap#setMixcMeta",
     "//slap#fillBasic",
     "//epntap#populate", "//epntap#populate-2_0",
