@@ -11,6 +11,8 @@ Version 0.9.7
 
 	* Behaviour change: pythonCores no longer run in a file system sandbox 
 		(can't do that thread-safely).
+	* The default VOTable version delivered is now VOTable 1.3 (actually,
+	  it's been 1.3 for a while now, we just didn't declare it)
 	* support for Obscore 1.1 (update should be automatic)
 	* support for EPN-TAP 2.0 (manually change to the #table-2.0 mixin)
 	* Obscore support is now at version 1.1
@@ -18,6 +20,8 @@ Version 0.9.7
 	* DaCHS's ADQL cross matches should now have "good" query plans 
 	  regardless or argument order (but are half as  fast as in previous.
 	  "good" cases).
+	* Removed bbox-based SIAP (together with the base.Box SQL type because 
+		DaCHS has been requiring pgsphere for quite a while now.
 
 
 Version 0.9.6 (2016-03-16)
